--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - run: sleep 5
       # Produces >500kb of text, then sleep for 5s
-      - run: for i in {1..50000}; do  echo "ping ${i}" sleep 1; done && sleep 5
+      - run: for i in {1..50000}; do  && sleep 1 echo "ping ${i}"; done && sleep 5
       # Produces >500kb of text, then sleep for 5s
       - run: for i in {1..50000}; do  echo "ping ${i}" sleep 1; done && sleep 5
       # Produces >500kb of text, then sleep for 5s
